@@ -1,28 +1,27 @@
 <?xml version = '1.0' encoding = 'UTF-8'?>
-<ex:extension xmlns:ex="http://jcp.org/jsr/198/extension-manifest"
-              xmlns="http://xmlns.oracle.com/jdeveloper/1013/extension"
-              xmlns:jdev="http://xmlns.oracle.com/jdeveloper/1013/jdev-libraries"
-              id="net.sourceforge.pmd.jdeveloper" version="1.9"
+<extension xmlns="http://jcp.org/jsr/198/extension-manifest"
+              id="net.sourceforge.pmd.jdeveloper" version="1.9.0.0.1"
               esdk-version="1.0">
-  <ex:name>PMD JDeveloper Extension</ex:name>
-  <ex:owner>Torsten Kleiber</ex:owner>
-  <ex:classpaths>
-    <ex:classpath>${ide.extension.install.home}/lib/pmd-4.0.jar</ex:classpath>
-    <ex:classpath>${ide.extension.install.home}/lib/jaxen-1.1.jar</ex:classpath>
-    <ex:classpath>${ide.extension.install.home}/lib/asm-3.0.jar</ex:classpath>
-  </ex:classpaths>
-  <ex:dependencies>
-    <ex:import version="10.1.3">oracle.jdeveloper</ex:import>
-  </ex:dependencies>
-  <ex:hooks>
-    <jdeveloper-hook>
+  <name>PMD JDeveloper Extension</name>
+  <owner>Torsten Kleiber</owner>
+  <dependencies>
+    <import>oracle.javacore</import>
+    <import>oracle.ide.ceditor</import>
+  </dependencies>
+  <classpaths>
+    <classpath>net.sourceforge.pmd.jdeveloper.1.9.0.0.1/lib/pmd-4.0.jar</classpath>
+    <classpath>net.sourceforge.pmd.jdeveloper.1.9.0.0.1/lib/jaxen-1.1.jar</classpath>
+    <classpath>net.sourceforge.pmd.jdeveloper.1.9.0.0.1/lib/asm-3.0.jar</classpath>
+  </classpaths>
+  <hooks>
+    <jdeveloper-hook xmlns="http://xmlns.oracle.com/jdeveloper/1013/extension">
       <addins>
         <addin>net.sourceforge.pmd.jdeveloper.Plugin</addin>
       </addins>
     </jdeveloper-hook>
-    <ex:feature-hook>
-      <ex:description>Provides integrated support for PMD 4.0 in JDeveloper 10.1.3 - 11.1.1.</ex:description>
-      <ex:optional>true</ex:optional>
-    </ex:feature-hook>
-  </ex:hooks>
-</ex:extension>
+    <feature-hook>
+      <description>Provides integrated support for PMD 4.0 in JDeveloper 11g Technology Preview 2.</description>
+      <optional>false</optional>
+    </feature-hook>
+  </hooks>
+</extension>
