@@ -1,6 +1,9 @@
+November 06, 2007 - 1.9.0.0.1:
+Upgraded for use in JDeveloper 11.1.1 Developer Preview 2
+
 August 06, 2007 - 1.9:
 Upgraded to PMD 4.0
-Upgraded for use in JDeveloper 10.1.3 to 11.1.1
+Upgraded for use in JDeveloper 10.1.3 to 11.1.1 Developer Preview 1
 
 January 30, 2005 - 1.8:
 Better presentation of the rule violations.
